Fixes footer overlap

--- a/assets/stylesheets/team_up.sass
+++ b/assets/stylesheets/team_up.sass
@@ -34,7 +34,6 @@ a
 #wrap
   min-height: 100%
   height: auto !important
-  height: 100%
   margin: 0 auto -60px
 
 footer
@@ -43,6 +42,7 @@ footer
 
 #content
   padding-top: 50px
+  margin-bottom: 60px
 
 .actions
   text-align: right
